--- a/css/style.css
+++ b/css/style.css
@@ -1572,7 +1572,7 @@ input[type="text"],input[type="password"],input[type="email"], textarea, select 
 
 .vozx-table.vozx-table-alternative th{
 	color: #fff;
-	background: #e4664e;
+	background: #876c29;
 	padding: 4px 20px;
 	border-left: 0px;
 }
@@ -7156,7 +7156,7 @@ cite{
 	z-index: 9999;
 	width: 100%;
 	position: fixed;
-	background: rgba(57, 45, 31, 0.9);
+	background: #876c29;
 	border-bottom: 1px solid #eeeeee;
 }
 
@@ -16431,7 +16431,7 @@ a.ab-tweet-next:hover{
 }
 
 #footer_copyright{
-	background: #0f151a;
+	background: #876c29;
 	color: #9fa4af;
 	font-size: 13px;
 	line-height: 30px;
@@ -16605,11 +16605,12 @@ a.ab-tweet-next:hover{
 
 #footer_container{
 	margin: 0 335px;
-	border-top: 1px solid #555;
+/* 	border-top: 1px solid #555; */
 	padding: 30px 0;
 	position: relative;
 }
 
+/*
 #footer_container:after{
 	content: "";
 	width: 1px;
@@ -16619,6 +16620,7 @@ a.ab-tweet-next:hover{
 	left: 50%;
 	top: 0;
 }
+*/
 
 #footer_container .span6{
 	display: inline-block;
